force-app/main/default/objects/Appeasement__c/Appeasement__c.object-meta.xml
<CustomObject>
    <label>Appeasement</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Appeasement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appeasement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>