force-app/main/default/objects/Appeasement__c/fields/Appeasement_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>Appeasement_Code_Formula__c</fullName>
    <formula>Appeasement_Code_Id__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appeasement Code</label>
    <type>Text</type>
</CustomField>