force-app/main/default/objects/Appeasement__c/fields/Appeasement_Code_Id__c.field-meta.xml
<CustomField>
    <fullName>Appeasement_Code_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appeasement Code Id</label>
    <referenceTo>Appeasement_Code__c</referenceTo>
    <relationshipLabel>Appeasements</relationshipLabel>
    <relationshipName>Appeasements</relationshipName>
    <type>Lookup</type>
</CustomField>