force-app/main/default/objects/Appeasement__c/fields/Contact_Formula__c.field-meta.xml
<CustomField>
    <fullName>Contact_Formula__c</fullName>
    <formula>Contact__r.FirstName + &apos; &apos; +  Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact</label>
    <type>Text</type>
</CustomField>