force-app/main/default/objects/Appeasement__c/fields/Linked_Appeasement_Code__c.field-meta.xml
<CustomField>
    <fullName>Linked_Appeasement_Code__c</fullName>
    <formula>Appeasement_Code_Id__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Appeasement Code</label>
    <type>Text</type>
</CustomField>