force-app/main/default/objects/Appeasement__c/fields/Purpose_of_Appeasement__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Appeasement__c</fullName>
    <label>Purpose of Appeasement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Baby Registry</fullName>
            </value>
            <value>
                <fullName>Bulk Order</fullName>
            </value>
            <value>
                <fullName>CS Appeasement</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>ECR</fullName>
            </value>
            <value>
                <fullName>Misship</fullName>
            </value>
            <value>
                <fullName>Order Replacement</fullName>
            </value>
            <value>
                <fullName>RClub</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Shortship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>